Fix crash in SendKeyEvent when no TextInputClient is specified.

Bug: 750526
Change-Id: I46cf65981560a973a38709f38da8fdfd43861b3a